--- a/angular.json
+++ b/angular.json
@@ -67,6 +67,9 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+         
+              "proxyConfig": "proxy.conf.json",
+           
           "configurations": {
             "production": {
               "buildTarget": "project:build:production"
@@ -76,6 +79,7 @@
             }
           },
           "defaultConfiguration": "development"
+          
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n"
